--- a/src/design/ele.less
+++ b/src/design/ele.less
@@ -1,6 +1,14 @@
-.el-notification{
-    align-items: center !important;
+.el-notification {
+  align-items: center !important;
 }
-.el-notification__content{
-    margin: 0 !important;
+.el-notification__content {
+  padding: 0;
+  margin: 0 !important;
+  font-size: 0;
+}
+.body_eq {
+  height: 100px;
+  padding: auto;
+  margin: 200px;
+  font-size: 200px;
 }
